# LiTr

./: settings.gradle
avffmpeg/: build.gradle
avffmpeg/src/androidTest/java/com/myl/avffmpeg/: ExampleInstrumentedTest.kt
avffmpeg/src/main/cpp/: CMakeLists.txt
avffmpeg/src/main/cpp/include/: CMakeLists.txt
avffmpeg/src/test/java/com/myl/avffmpeg/: ExampleUnitTest.kt
